Fixed sticky topic title height overflow

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -201,6 +201,7 @@ body {
     @supports (position: sticky) {
       position: sticky;
       top: 0;
+      height: 50px;
     }
   }
 
